# ML_01_Product_Classifier

./: .gitignore  CRISP_DM_Phase1_Phase2.md  CRISP_DM_Phase5_Phase6.md  PLAN_Phase3_onwards.md  README.md  data_cleaning.ipynb  data_prep.ipynb  eda.ipynb  modeling_notebook.ipynb  pyproject.toml
app/: app.py  predictor.py  requirements.txt
app/static/: style.css
app/templates/: index.html
docs/: CLIENT_FINETUNING_GUIDE.md  PROJECT_WRITEUP.md
evaluation/: classification_report.csv
notebooks/: 01_data_download.ipynb  02_data_cleaning.ipynb  03_eda.ipynb  04_modeling.ipynb
