[project]
name = "product-classifier"
version = "2.0.0"
description = "UNSPSC L1 product auto-classifier — Flask web app (Tayana Solutions)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.0.0",
    "fasttext-wheel>=0.9.2",
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
    "joblib>=1.3.0",
    "scikit-learn>=1.3.0",
    "numpy>=1.24.0",
]

[tool.uv]
# uv manages the venv at .venv/ — app is launched from app/app.py
package = false

[tool.uv.sources]
# fasttext-wheel ships prebuilt wheels; avoids needing a C++ compiler
